--- a/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/index.html
+++ b/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/index.html
@@ -23,92 +23,92 @@
 
         <div id="links-container">
             <section>
-            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M1.png">
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 1.html">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M1.png">
                 <span>Campfire </span>
             </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 2.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M2.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 2.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M2.png">
                     <span>Piano ballad </span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 3.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M3.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 3.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M3.png">
                     <span>Country song </span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 4.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M4.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 4.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M4.png">
                     <span>Funk</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 5.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M5.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 5.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M5.png">
                     <span>Pop</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 6.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M6.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 6.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M6.png">
                     <span>Classic rock</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 7.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M7.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 7.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M7.png">
                     <span>Jazz trio</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 8.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M8.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 8.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M8.png">
                     <span>Western Rock</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 9.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M9.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 9.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M9.png">
                     <span>Celtic hornpipe</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 10.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M10.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 10.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M10.png">
                     <span>Smooth jazz</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 11.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M11.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 11.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M11.png">
                     <span>Somber waltz</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 12.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M12.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 12.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M12.png">
                     <span>Early rock and roll</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 13.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M13.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 13.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M13.png">
                     <span>Acoustic guitar ballad</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 14.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M14.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 14.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M14.png">
                     <span>Reggae</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 15.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M15.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Lesson 15.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/Afbeeldingen/M15.png">
                     <span>Smooth jazz 2</span>
                 </a>
             </section>
