--- a/Main index/eartraining/Jam Tracks/Tonal Map/index.html
+++ b/Main index/eartraining/Jam Tracks/Tonal Map/index.html
@@ -17,45 +17,28 @@
     </Header>
     <main>
         <section>
-            <h2> Level 1 Seven Worlds</h2>
+            <h2> Tonal Map</h2>
         </section>
         <div id="links-container">
             <section>
-            <a class="link" href="M1.html">
-                <img src="Afbeeldingen/M1.webp">
-                <span>Module 1</span>
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 1/index.html">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/T1.png">
+                <span>Pure Harmony 1</span>
             </a>
             </section>
             <section>
-                <a class="link" href="M2.html">
-                    <img src="Afbeeldingen/M2.webp">
-                    <span>Module 2</span>
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Pure Harmony Deel 2/index.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/T2.png">
+                    <span>Pure Harmony 2</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M3.html">
-                    <img src="Afbeeldingen/M3.webp">
-                    <span>Module 3</span>
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/index.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/T3.png">
+                    <span>Mix Harmony</span>
                 </a>
             </section>
-            <section>
-                <a class="link" href="M4.html">
-                    <img src="Afbeeldingen/M4.webp">
-                    <span>Module 4</span>
-                </a>
-            </section>
-            <section>
-                <a class="link" href="M5.html">
-                    <img src="Afbeeldingen/M5.webp">
-                    <span>Module 5</span>
-                </a>
-            </section>
-            <section>
-                <a class="link" href="M6.html">
-                    <img src="Afbeeldingen/M6.webp">
-                    <span>Module 6</span>
-                </a>
-            </section>
+
   
  
         </div>
