--- a/Main index/eartraining/Sing the numbers/Tonal map/module 1.html
+++ b/Main index/eartraining/Sing the numbers/Tonal map/module 1.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section id='steezy'>
-            <h2>Module 1.</h2>
+            <h2>Module 1</h2>
         </section>
 
         <div class="lesson-block">
