--- a/Main index/eartraining/Sing the numbers/Tonal map/module 5.html
+++ b/Main index/eartraining/Sing the numbers/Tonal map/module 5.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <h1>TONAL MAP</h1>
+        <a href="https://thomastooten.github.io/JPRSite/eartraining/Sing the numbers/Main index/Tonal map/index.html">
+            <h1>TONAL MAP</h1>
+        </a>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
