--- a/Main index/eartraining/Sing the numbers/Tonal map/module 2.html
+++ b/Main index/eartraining/Sing the numbers/Tonal map/module 2.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <header>
-        <a href="https://thomastooten.github.io/JPRSite/eartraining/Sing the numbers/Main index/Tonal map/index.html">
+        <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Sing the numbers/Tonal map/index.html">
             <h1>TONAL MAP</h1>
         </a>
+        /Users/thomastooten/Documents/GitHub/JPRSite/Main index/eartraining/index.html
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
