--- a/Main index/eartraining/Sing the numbers/Tonal map/module 4.html
+++ b/Main index/eartraining/Sing the numbers/Tonal map/module 4.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="https://thomastooten.github.io/JPRSite/eartraining/Sing the numbers/Main index/Tonal map/index.html">
+        <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Sing the numbers/Tonal map/index.html">
             <h1>TONAL MAP</h1>
         </a>
         <nav>
