--- a/Main index/eartraining/Sing the numbers/Seven Worlds/De Tweede Harmonische Omgeving (Dorisch).html
+++ b/Main index/eartraining/Sing the numbers/Seven Worlds/De Tweede Harmonische Omgeving (Dorisch).html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="https://thomastooten.github.io/JPRSite/eartraining/Sing the numbers/Seven Worlds/index.html">
+        <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Sing the numbers/Seven Worlds/index.html">
             <h1>Seven Worlds</h1>
         </a>
         <nav>
