--- a/Main index/eartraining/Sing the numbers/Melody Paths/Lessen 5 tem 8.html
+++ b/Main index/eartraining/Sing the numbers/Melody Paths/Lessen 5 tem 8.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <Header>
-        <a href="https://thomastooten.github.io/JPRSite/eartraining/Sing the numbers/Melody Paths/index.html">
+        <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Sing the numbers/Melody Paths/index.html">
             <h1>Melody Paths</h1>
         </a>
         <nav>
