--- a/Main index/eartraining/Sing the numbers/Melody Paths/Lessen 1 tem 4.html
+++ b/Main index/eartraining/Sing the numbers/Melody Paths/Lessen 1 tem 4.html
@@ -10,10 +10,9 @@
 <body>
     <Header>
 
-        <a href="https://thomastooten.github.io/JPRSite/eartraining/Sing the numbers/Melody Paths/index.html">
+        <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Sing the numbers/Melody Paths/index.html">
             <h1>Melody Paths</h1>
         </a>
-
         <nav>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
