--- a/Main index/eartraining/Feel The numbers/index.html
+++ b/Main index/eartraining/Feel The numbers/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melody Path</title>
+    <title>Feel th enumbers</title>
     <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/Tegel.css">
 </head>
 <body>
     <Header>
-        <h1>Melody Paths</h1>
+        <h1>Feel the numbers</h1>
         <nav>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
@@ -16,9 +16,7 @@
         </nav>
     </Header>
     <main>
-        <section>
-            <h2>Sing The numbers</h2>
-        </section>
+
         <div id="links-container">
             <section>
             <a class="link" href="M1.html">
