--- a/Main index/eartraining/Feel The numbers/M10.html
+++ b/Main index/eartraining/Feel The numbers/M10.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>TONAL MAP</h1>
+        <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel The numbers/index.html">
+            <h1>Feel the numbers</h1>
+        </a>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
