--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -53,7 +53,7 @@
                     </a>
                 </section>
                 <section>
-                    <a class="link" href="">
+                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/index.html">
                         <img src="Afbeeldingen/FTC.webp" alt="Melody Path" height="200" width="200">
                         <span>Feel the chords</span>
                     </a>
