--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/M2.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/M2.html
@@ -30,52 +30,52 @@
 
         <div class="lesson-block">
             <p>Track 1</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 1 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 1 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 2</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 2 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 2 - Chords 1, 4 and 5.mp3"></audio>
         </div>
 
         <div class="lesson-block">
             <p>Track 3</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 3 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 3 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 4</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 4 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 4 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 5</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 5 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 5 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 6</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 6 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 6 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 7</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 7 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 7 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 8</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 8 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 8 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 9</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 9 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 9 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 10</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 10 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 10 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 11</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 11 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 11 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 12</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 12 - Chords 1, 4 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M2/audio/Lesson 05 - Feel the Chords 12 - Chords 1, 4 and 5.mp3"></audio>
         </div>
 
     </main>
