--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/M3.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/M3.html
@@ -30,36 +30,36 @@
 
         <div class="lesson-block">
             <p>Track 1</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson3/Lesson 09 - 1 chord or 6 chord - Feel the Chords 1.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/audio/Lesson 09 - 1 chord or 6 chord - Feel the Chords 1.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 2</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson3/Lesson 09 - 1 chord or 6 chord - Feel the Chords 2.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/audio/Lesson 09 - 1 chord or 6 chord - Feel the Chords 2.mp3"></audio>
         </div>
 
         <div class="lesson-block">
             <p>Track 3</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson3/Lesson 09 - 1 chord or 6 chord - Feel the Chords 3.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/audio/Lesson 09 - 1 chord or 6 chord - Feel the Chords 3.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 4</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson3/Lesson 09 - 1 chord or 6 chord - Feel the Chords 4.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/audio/Lesson 09 - 1 chord or 6 chord - Feel the Chords 4.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 5</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson3/Lesson 09 - 1 chord or 6 chord - Feel the Chords 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/audio/Lesson 09 - 1 chord or 6 chord - Feel the Chords 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 6</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson3/Lesson 09 - 1 chord or 6 chord - Feel the Chords 6.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/audio/Lesson 09 - 1 chord or 6 chord - Feel the Chords 6.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 7</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson3/Lesson 09 - 1 chord or 6 chord - Feel the Chords 7.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/audio/Lesson 09 - 1 chord or 6 chord - Feel the Chords 7.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 8</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson3/Lesson 09 - 1 chord or 6 chord - Feel the Chords 8.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M3/audio/Lesson 09 - 1 chord or 6 chord - Feel the Chords 8.mp3"></audio>
         </div>
 
 
