--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html
@@ -25,10 +25,13 @@
         <h2>Les 3</h2>
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Lesson 6 - Flowing with chords 1, 4 and 5Comp.mp4"></video>
-                <span>Following with chords</span>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/M7 Deel 1com.mp4"></video>
+                <span>Deel 1</span>
             </div>
-    
+            <div class="media-item">
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/M7 Deel 1com.mp4"></video>
+                <span>Deel 2</span>
+            </div>
         </div>
 
         <h2>Modules</h2>
