--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html
@@ -29,11 +29,10 @@
                 <span>Deel 1</span>
             </div>
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/M7 Deel 1com.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/M7 DEEL 2c.mp4"></video>
                 <span>Deel 2</span>
             </div>
         </div>
-
         <h2>Modules</h2>
         <div id="links-container">
             <section>
