--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/M7Index.html
@@ -22,7 +22,6 @@
             <h2>Consolidating chords 1, 4, 5D and 6-</h2>
         </section>
 
-        <h2>Les 3</h2>
         <div id="media-container">
             <div class="media-item">
                 <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/audio/M7 Deel 1com.mp4"></video>
@@ -37,31 +36,31 @@
         <div id="links-container">
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6ClassicRock.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M6/1.png" alt="Counrty Waltz">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A1.png" alt="Counrty Waltz">
                     <span>Bossa Nova</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6ClassicRock.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M6/2.png" alt="Dreamy">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A2.png" alt="Dreamy">
                     <span>Classic Rock</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6Funk.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M6/3.png" alt="Jazz Guitar Trio">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A3.png" alt="Jazz Guitar Trio">
                     <span>Funk</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6Pop.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M6/4.png" alt="Strumming Guitars">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A4.png" alt="Strumming Guitars">
                     <span>Pop</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6FamousMelodies.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M6/5.png" alt="Strumming Guitars">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M7/afbeeldingen/A5.png" alt="Strumming Guitars">
                     <span>Famous Melodies</span>
                 </a>
             </section>
