--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Index.html
@@ -25,41 +25,40 @@
         <h2>Les 3</h2>
         <div id="media-container">
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Lesson 6 - Flowing with chords 1, 4 and 5Comp.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Lesson 6 - Flowing with chords 1, 4 and 5Comp.mp4"></video>
                 <span>Following with chords</span>
-            </div>
-    
+            </div>    
         </div>
 
         <h2>Modules</h2>
         <div id="links-container">
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6ClassicRock.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M6/1.png" alt="Counrty Waltz">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/afbeeldingen/1.png" alt="Counrty Waltz">
                     <span>Bossa Nova</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6ClassicRock.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M6/2.png" alt="Dreamy">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/afbeeldingen/2.png" alt="Dreamy">
                     <span>Classic Rock</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6Funk.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M6/3.png" alt="Jazz Guitar Trio">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/afbeeldingen/3.png" alt="Jazz Guitar Trio">
                     <span>Funk</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6Pop.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M6/4.png" alt="Strumming Guitars">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/afbeeldingen/4.png" alt="Strumming Guitars">
                     <span>Pop</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6FamousMelodies.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Afbeeldingen/M6/5.png" alt="Strumming Guitars">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/afbeeldingen/5.png" alt="Strumming Guitars">
                     <span>Famous Melodies</span>
                 </a>
             </section>
@@ -67,9 +66,6 @@
 
 
 
-        <section>
-            <p>Improvise For Real biedt meespeeltracks aan in alle toonaarden en verschillende muziekgenres. <br> Je kan ook zelf backtracks maken in de app 'iReal Pro' en Hookpad (www.hooktheory.com)</p>
-        </section>
     </main>
 </body>
 </html>
